--- a/printerTest/app/src/main/res/layout/activity_main.xml
+++ b/printerTest/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,8 @@
                     android:layout_width="350dp"
                     android:layout_height="50dp"
                     android:layout_centerInParent="true"
+                    android:maxLines="1"
+                    android:inputType="textShortMessage"
                     android:background="@drawable/search_bg"
                     android:hint="@string/start_order"
                     android:paddingStart="@dimen/search_padding_left"
@@ -47,7 +49,7 @@
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_gravity="bottom|end"
-            android:layout_margin="30dp">
+            android:layout_margin="@dimen/main_fab_layout_margin">
 
 
             <android.support.design.widget.FloatingActionButton
