--- a/printerTest/app/src/main/res/layout/item_client_rv.xml
+++ b/printerTest/app/src/main/res/layout/item_client_rv.xml
@@ -55,6 +55,14 @@
                 android:textColor="@color/secondary_text"
                 android:layout_marginTop="10dp"/>
 
+            <TextView
+                android:id="@+id/item_txt_note_client"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/item_txt_address_client"/>
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
