--- a/printerTest/app/src/main/res/layout/activity_printer.xml
+++ b/printerTest/app/src/main/res/layout/activity_printer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +8,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/printer_rv"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/btn_printer"/>
@@ -24,6 +24,26 @@
         android:background="@drawable/btn_printer_bg"
         android:textColor="@color/primary_text"
         android:translationZ="@dimen/item_card_translation_z"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp">
+        <TextView
+            android:text="当前蓝牙："
+            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/tv_main_bluetooth"
+            android:layout_toStartOf="@+id/tv_main_bluetooth" />
+        <TextView
+            android:gravity="center_vertical"
+            android:layout_marginRight="5dp"
+            android:layout_alignParentRight="true"
+            android:text="未连接蓝牙"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:id="@+id/tv_main_bluetooth" />
+    </RelativeLayout>
 
 
 </RelativeLayout>
