--- a/printerTest/app/src/main/res/values/styles.xml
+++ b/printerTest/app/src/main/res/values/styles.xml
@@ -16,5 +16,10 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="title">
+        <item name="android:background">@color/design_default_color_primary</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+    </style>
 
 </resources>
