--- a/printerTest/app/src/main/res/layout/activity_printf_blue_list.xml
+++ b/printerTest/app/src/main/res/layout/activity_printf_blue_list.xml
@@ -11,8 +11,8 @@
         <TextView
             android:id="@+id/tv_blue_list_back"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:drawableLeft="@mipmap/icon_page_left"
+            android:layout_height="35dp"
+            android:drawableLeft="@drawable/ic_action_bar_back"
             android:gravity="center"
             android:text="@string/back"
             android:textColor="@android:color/white"
@@ -52,15 +52,6 @@
             android:gravity="center_vertical"
             android:text="@string/current_printer"
             android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/tv_blue_list_modify"
-            android:text="@string/modify"
-            android:paddingLeft="5dp"
-            android:paddingRight="10dp"
-            android:gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
 
     </LinearLayout>
 
