--- a/printerTest/app/src/main/res/values/ids.xml
+++ b/printerTest/app/src/main/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item name="tag_is_click" type="id" />
     <item name="tag_position" type="id" />
+    <item name="tag_what" type="id"/>
+    <item name="tag_txt_count" type="id" />
 </resources>
