--- a/printerTest/app/src/main/res/layout/activity_login.xml
+++ b/printerTest/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:inputType="textPassword" />
+                android:inputType="number" />
 
         </android.support.design.widget.TextInputLayout>
 
