--- a/printerTest/app/src/main/res/layout/dialog_clinet.xml
+++ b/printerTest/app/src/main/res/layout/dialog_clinet.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="350dp"
-    android:layout_height="400dp"
+    android:layout_width="match_parent"
+    android:layout_height="700dp"
     android:layout_gravity="center"
-    android:gravity="center"
     app:cardCornerRadius="@dimen/item_card_corner">
 
     <RelativeLayout
@@ -50,18 +49,35 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/txt_layout_phone"
+            android:id="@+id/txt_layout_phone1"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_layout_name"
-            android:hint="请输入手机号"
+            android:hint="请输入电话"
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/txt_edit_phone"
+                android:id="@+id/txt_edit_phone1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPhonetic"
+                android:inputType="number"
+                android:lines="1" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/txt_layout_phone2"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_layout_phone1"
+            android:hint="请输入电话2"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/txt_edit_phone2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
                 android:lines="1" />
 
         </android.support.design.widget.TextInputLayout>
@@ -71,8 +87,8 @@
             android:id="@+id/txt_layout_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txt_layout_phone"
-            android:hint="请输入地址"
+            android:layout_below="@id/txt_layout_phone2"
+            android:hint="请输入街道"
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
@@ -80,17 +96,102 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPostalAddress"
-                android:lines="2" />
+                android:lines="2"
+                android:maxLines="2"/>
 
         </android.support.design.widget.TextInputLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linea_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/txt_layout_address">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/txt_layout_zip"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:hint="邮编"
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txt_edit_zip"
+                    android:lines="1"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/txt_layout_unit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="单元"
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:lines="1"
+                    android:id="@+id/txt_edit_unit"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/txt_layout_floor"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="楼层"
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:lines="1"
+                    android:id="@+id/txt_edit_floor"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/txt_layout_room"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:hint="房间"
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:lines="1"
+                    android:id="@+id/txt_edit_room"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+
+        </LinearLayout>
+
 
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/txt_layout_note"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txt_layout_address"
-            android:hint="请输入备注(选填)"
+            android:layout_height="90dp"
+            android:layout_below="@id/linea_layout"
+            android:hint="请输入备注(打印)"
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
@@ -102,6 +203,25 @@
                 android:maxLines="3" />
 
         </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/txt_layout_note2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_layout_note"
+            android:hint="请输入备注(不打印)"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/txt_edit_note2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textAutoCorrect"
+                android:lines="3"
+                android:maxLines="3" />
+
+        </android.support.design.widget.TextInputLayout>
+
 
         <TextView
             android:id="@+id/txt_ok"
