--- a/printerTest/app/src/main/res/layout/dialog_edit.xml
+++ b/printerTest/app/src/main/res/layout/dialog_edit.xml
@@ -2,7 +2,12 @@
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/edit_password"
     android:layout_width="200dp"
-    android:layout_height="30dp"
-    android:layout_gravity="center">
+    android:layout_height="50dp"
+    android:layout_gravity="center"
+    android:hint="建议输入4位数"
+    android:gravity="center"
+    android:textColor="@color/primary"
+    android:inputType="number"
+    >
 
 </EditText>
