--- a/printerTest/app/src/main/res/layout/dialog_food.xml
+++ b/printerTest/app/src/main/res/layout/dialog_food.xml
@@ -99,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="是否为甜品或酒水"
-                android:textSize="@dimen/txt_id_size" />
+                android:textSize="@dimen/txt_client_size" />
 
             <RadioGroup
                 android:id="@+id/radio_group"
