--- a/printerTest/app/src/main/res/layout/activity_printer.xml
+++ b/printerTest/app/src/main/res/layout/activity_printer.xml
@@ -11,16 +11,30 @@
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btn_printer"/>
+        android:layout_above="@id/btn_print_kitchen"/>
 
     <Button
-        android:id="@+id/btn_printer"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
+        android:id="@+id/btn_print_kitchen"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
+        android:layout_marginStart="20dp"
+        android:textSize="16sp"
         android:text="@string/printer"
+        android:background="@drawable/btn_printer_bg"
+        android:textColor="@color/primary_text"
+        android:translationZ="@dimen/item_card_translation_z"/>
+    <Button
+        android:id="@+id/btn_print_check"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:text="@string/check"
+        android:textSize="16sp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_printer_bg"
         android:textColor="@color/primary_text"
         android:translationZ="@dimen/item_card_translation_z"/>
