--- a/printerTest/app/src/main/res/layout/dialog_food.xml
+++ b/printerTest/app/src/main/res/layout/dialog_food.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="350dp"
     android:layout_height="400dp"
     android:layout_gravity="center"
     android:gravity="center"
-    app:cardCornerRadius="@dimen/item_card_corner"
-    >
+    app:cardCornerRadius="@dimen/item_card_corner">
 
 
     <RelativeLayout
@@ -88,6 +87,7 @@
 
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_layout_gre_name"
@@ -130,18 +130,18 @@
             android:id="@+id/txt_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/layout"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
             android:text="确定"
             android:textColor="@color/accent"
             android:textSize="20sp" />
 
         <TextView
+            android:layout_below="@id/layout"
             android:id="@+id/txx_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
             android:layout_toStartOf="@id/txt_ok"
             android:text="取消"
@@ -151,4 +151,4 @@
     </RelativeLayout>
 
 
-</android.support.v7.widget.CardView>
+</ScrollView>
