--- a/printerTest/app/src/main/res/layout/item_order_rv.xml
+++ b/printerTest/app/src/main/res/layout/item_order_rv.xml
@@ -6,11 +6,11 @@
     android:translationZ="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/order_item_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="5dp"
-        >
+        android:layout_margin="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="订单编号："
+                android:text="No:"
                 android:textSize="16sp" />
 
             <TextView
