--- a/printerTest/app/src/main/res/layout/dialog_clinet.xml
+++ b/printerTest/app/src/main/res/layout/dialog_clinet.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="700dp"
     android:layout_gravity="center"
     app:cardCornerRadius="@dimen/item_card_corner">
 
@@ -228,7 +228,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/txt_layout_note2"
+            android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
             android:text="确定"
             android:textColor="@color/accent"
@@ -238,7 +238,7 @@
             android:id="@+id/txx_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txt_layout_note2"
+            android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
             android:layout_toStartOf="@id/txt_ok"
             android:text="取消"
@@ -248,4 +248,4 @@
     </RelativeLayout>
 
 
-</ScrollView>
+</android.support.v7.widget.CardView>
