--- a/printerTest/app/src/main/res/layout/activity_printer.xml
+++ b/printerTest/app/src/main/res/layout/activity_printer.xml
@@ -22,6 +22,28 @@
         android:src="@mipmap/back"
         android:visibility="visible" />
 
+    <RelativeLayout
+        android:layout_margin="20dp"
+        android:id="@+id/line_total_price"
+        android:layout_above="@+id/btn_print_check"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="总价："
+            android:textSize="25sp"/>
+        <TextView
+            android:id="@+id/text_print_total_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:textSize="25sp"
+            android:text="0.0"/>
+    </RelativeLayout>
+
+
     <Button
         android:id="@+id/btn_print_kitchen"
         android:layout_width="150dp"
