--- a/printerTest/app/src/main/res/layout/dialog_clinet.xml
+++ b/printerTest/app/src/main/res/layout/dialog_clinet.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="700dp"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     app:cardCornerRadius="@dimen/item_card_corner">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:paddingStart="10dp">
+        android:paddingStart="10dp"
+        android:layout_marginTop="5dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/txt_layout_num"
@@ -248,4 +249,4 @@
     </RelativeLayout>
 
 
-</android.support.v7.widget.CardView>
+</ScrollView>
